k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jogo-logica
  labels: 
    app: jogo-logica
spec:
  type: ClusterIP
  selector:
    app: jogo-logica
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
