k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jogo-logica-ig
  labels:
    app.kubernetes.io/name: nginx
spec:
  rules:
  - host: jogo-logica.teste.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jogo-logica
            port: 
              number: 80
